# realtime-log-diagnosis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INTERVIEW_NOTES.md  project3_final_summary.md  sample_diagnosis_report.md
docs/dev/: architecture.md
docs/notes/: day1_notes.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: generate_sample_log.py
src/: __init__.py  agent.py  api.py  config.py  consumer.py  correlation.py  detector.py  llm_agent.py  llm_client.py  llm_config.py  log.py  log_diagnosis_agent.py  models.py  parser.py  pipeline.py  runbook.py  slo.py  store.py
src/tools/: __init__.py
tests/: test_log_diagnosis_agent.py
