[project]
name = "realtime-log-diagnosis-agent"
version = "2.0.0"
description = "实时日志异常诊断 Agent - LLM 驱动的日志分析与根因定位"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.9",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "anthropic>=0.52.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version = "3.12"
strict = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
